# QT5-Ogre1

./: CMakeLists.txt  LICENSE  README.md  debug.txt
src/: MainView.cpp
src/UI/: Application.cpp  Application.hpp  MainWindow.hpp  main.ui  mainWindow.cpp  mainWindow.h
src/core/: config.hpp
src/plugins/: CMakeLists.txt
src/plugins/RenderViewer/: CMakeLists.txt  RenderViewerView.cpp  RenderViewerView.hpp  RenderViewerWidget.cpp  RenderViewerWidget.hpp
src/plugins/SceneViewer/: CMakeLists.txt  SceneViewerCommon.hpp  SceneViewerInner.cpp  SceneViewerInner.hpp  SceneViewerOverlay.cpp  SceneViewerOverlay.hpp  SceneViewerView.cpp  SceneViewerView.hpp  SceneViewerWidget.cpp  SceneViewerWidget.h  SceneViewerWidget.hpp  SceneViewerWidgetOverlay.cpp  SceneViewerWidgetOverlay.h
src/plugins/SceneViewer/controller/: CameraController.hpp
src/plugins/SceneViewer/gizmo/: AbstractGizmo.hpp  RotateGizmo.hpp  ScaleGizmo.hpp  TranslateGizmo.hpp
src/plugins/SceneViewer/loader/: AssimpSceneLoader.cpp  AssimpSceneLoader.hpp
src/plugins/SceneViewer/object/: ActivePointObject.hpp  AxisGridLineObject.hpp  CameraObject.hpp
src/plugins/SceneViewer/window/: OgreWidget.cpp  OgreWidget.hpp  OgreWindow.cpp  OgreWindow.hpp
